--- a/src/components/atoms/Icon.module.scss
+++ b/src/components/atoms/Icon.module.scss
@@ -20,4 +20,27 @@
       -o-transform: translate(-50%, -50%);
     }
   }
+  &.plus {
+    &::after,
+    &::before {
+      content: "";
+      position: absolute;
+      background-color: #000;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+    }
+    &::before {
+      width: 10px;
+      height: 2px;
+    }
+    &::after {
+      width: 2px;
+      height: 10px;
+    }
+  }
 }
