--- a/src/components/atoms/Button.module.scss
+++ b/src/components/atoms/Button.module.scss
@@ -1,7 +1,10 @@
+@import "../../styles/variable";
+
 .btn {
+  position: relative;
   width: 100%;
-  background-color: #8e90e4;
-  color: #fff;
+  background-color: $COLOR_PRIMARY;
+  color: $COLOR_WHITE;
   font-weight: 500;
   border: 0;
   border-radius: 10px;
@@ -9,7 +12,37 @@
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  overflow: hidden;
   &.md {
     height: 48px;
+  }
+  &:active {
+    filter: brightness(85%);
+  }
+  &:disabled {
+    filter: brightness(70%);
+    -webkit-filter: brightness(70%);
+    pointer-events: none;
+  }
+}
+
+.riple {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  animation: ripple 0.6s linear;
+  @keyframes ripple {
+    0% {
+      width: 0;
+      height: 0;
+      opacity: 0.5;
+    }
+    100% {
+      width: 500px;
+      height: 500px;
+      opacity: 0;
+    }
   }
 }
