--- a/src/components/atoms/Checkbox.module.scss
+++ b/src/components/atoms/Checkbox.module.scss
@@ -1,9 +1,11 @@
+@import "../../styles/variable";
+
 .checkbox {
   appearance: none;
   position: relative;
   width: 20px;
   height: 20px;
-  border: 1px solid #333;
+  background-color: $COLOR_GRAY_100;
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -11,20 +13,20 @@
   -o-border-radius: 4px;
   cursor: pointer;
   &:checked {
-    background-color: #8e90e4;
+    background-color: $COLOR_PRIMARY;
     &::before {
       content: "";
       position: absolute;
       left: 0;
       top: 0;
-      width: 18px;
-      height: 18px;
+      width: 20px;
+      height: 20px;
       background-image: url(../../assets/icons/check.svg);
       background-position: center;
       background-repeat: no-repeat;
     }
   }
-  &:disabled{
+  &:disabled {
     opacity: 0.4;
     cursor: not-allowed;
   }
