--- a/src/components/atoms/Dimm.module.scss
+++ b/src/components/atoms/Dimm.module.scss
@@ -1,16 +1,33 @@
 .dimm {
   position: fixed;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  &.open {
+  z-index: 9998;
+  visibility: hidden;
+  pointer-events: auto;
+  transition: background-color 0.3s ease, visibility 0s 0.3s, opacity 0.3s ease;
+  -webkit-transition: background-color 0.3s ease, visibility 0s 0.3s,
+    opacity 0.3s ease;
+  -moz-transition: background-color 0.3s ease, visibility 0s 0.3s,
+    opacity 0.3s ease;
+  -ms-transition: background-color 0.3s ease, visibility 0s 0.3s,
+    opacity 0.3s ease;
+  -o-transition: background-color 0.3s ease, visibility 0s 0.3s,
+    opacity 0.3s ease;
+  pointer-events: none;
+  opacity: 0;
+  &.show {
+    visibility: visible;
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: background-color 0.3s ease, visibility 0s, opacity 0.3s ease;
+    -webkit-transition: background-color 0.3s ease, visibility 0s,
+      opacity 0.3s ease;
+    -moz-transition: background-color 0.3s ease, visibility 0s,
+      opacity 0.3s ease;
+    -ms-transition: background-color 0.3s ease, visibility 0s, opacity 0.3s ease;
+    -o-transition: background-color 0.3s ease, visibility 0s, opacity 0.3s ease;
     opacity: 1;
-    z-index: 1;
-  }
-  &.close {
-    opacity: 0;
-    z-index: -1;
   }
 }
