--- a/src/components/atoms/Switch.module.scss
+++ b/src/components/atoms/Switch.module.scss
@@ -1,9 +1,11 @@
+@import "../../styles/variable";
+
 .switch {
   appearance: none;
   position: relative;
   width: 48px;
   height: 28px;
-  background-color: #222;
+  background-color: $COLOR_GRAY_800;
   border-radius: 14px;
   -webkit-border-radius: 14px;
   -moz-border-radius: 14px;
@@ -22,7 +24,7 @@
     left: 4px;
     width: 20px;
     height: 20px;
-    background-color: #fff;
+    background-color: $COLOR_WHITE;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -35,7 +37,7 @@
     -o-transition: transform 0.3s ease-in-out;
   }
   &:checked {
-    background-color: #8e90e4;
+    background-color: $COLOR_PRIMARY;
     &::before {
       transform: translateX(20px);
       -webkit-transform: translateX(20px);
