--- a/src/components/atoms/Title.module.scss
+++ b/src/components/atoms/Title.module.scss
@@ -1,9 +1,34 @@
-.h1 {
-  font-size: 2em;
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-size: 2rem;
   font-weight: 800;
 }
 
 .h2 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.h3 {
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.h4 {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.h4 {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.h6 {
+  font-size: 1.1rem;
   font-weight: bold;
 }
