--- a/src/components/atoms/Checkbox.module.scss
+++ b/src/components/atoms/Checkbox.module.scss
@@ -5,6 +5,7 @@
   position: relative;
   width: 20px;
   height: 20px;
+  min-width: 20px;
   background-color: $COLOR_GRAY_100;
   border-radius: 4px;
   -webkit-border-radius: 4px;
