--- a/src/components/atoms/Accordion.module.scss
+++ b/src/components/atoms/Accordion.module.scss
@@ -28,12 +28,13 @@
 
 .panel {
   position: relative;
-  padding: 0 16px;
   transition: all 0.3s ease-in-out;
   overflow: visible;
-  transition: height 0.3s ease-in-out;
-  -webkit-transition: height 0.3s ease-in-out;
-  -moz-transition: height 0.3s ease-in-out;
-  -ms-transition: height 0.3s ease-in-out;
-  -o-transition: height 0.3s ease-in-out;
+  > div {
+    transition: height 0.3s ease-in-out;
+    -webkit-transition: height 0.3s ease-in-out;
+    -moz-transition: height 0.3s ease-in-out;
+    -ms-transition: height 0.3s ease-in-out;
+    -o-transition: height 0.3s ease-in-out;
+  }
 }
