--- a/src/components/atoms/Button.module.scss
+++ b/src/components/atoms/Button.module.scss
@@ -20,8 +20,7 @@
     filter: brightness(85%);
   }
   &:disabled {
-    filter: brightness(70%);
-    -webkit-filter: brightness(70%);
+    opacity: 0.6;
     pointer-events: none;
   }
 }
