--- a/src/components/atoms/Icon.module.scss
+++ b/src/components/atoms/Icon.module.scss
@@ -44,3 +44,57 @@
     }
   }
 }
+
+.svg-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &.spinner {
+    width: 24px;
+    height: 24px;
+    margin: 0 auto;
+    animation: 2s linear infinite svg-animation;
+    max-width: 100px;
+    circle {
+      animation: 1.4s ease-in-out infinite both circle-animation;
+      display: block;
+      fill: transparent;
+      stroke: #fff;
+      stroke-linecap: round;
+      stroke-dasharray: 283;
+      stroke-dashoffset: 280;
+      stroke-width: 14px;
+      transform-origin: 50% 50%;
+    }
+  }
+}
+
+// SVG animation.
+@keyframes svg-animation {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+// Circle animation.
+@keyframes circle-animation {
+  0%,
+  25% {
+    stroke-dashoffset: 280;
+    transform: rotate(0);
+  }
+
+  50%,
+  75% {
+    stroke-dashoffset: 75;
+    transform: rotate(45deg);
+  }
+
+  100% {
+    stroke-dashoffset: 280;
+    transform: rotate(360deg);
+  }
+}
