--- a/src/components/atoms/Input.module.scss
+++ b/src/components/atoms/Input.module.scss
@@ -1,9 +1,23 @@
-.input{
+.input-wrap {
+}
+
+.input {
+  position: relative;
   width: 100%;
   height: 32px;
-  border:0;
+  border: 0;
   outline: 0;
-  &:focus{
-    // background-color: #f5f5f5;
+  &[type="text"] {
+    &:focus {
+      background-color: #f5f5f5;
+      .underline {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 1px;
+        width: 100%;
+        background-color: #333;
+      }
+    }
   }
 }
