--- a/src/components/atoms/Label.module.scss
+++ b/src/components/atoms/Label.module.scss
@@ -1,11 +1,13 @@
 .wrapper {
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
   &.active,
   &:active {
     border-color: #000;
+  }
+  .label {
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
   }
 }
