--- a/src/components/organisms/Dialog.module.scss
+++ b/src/components/organisms/Dialog.module.scss
@@ -28,6 +28,7 @@
   }
   .header {
     h2 {
+      display: inline-block;
       font-size: 1.3rem;
     }
   }
@@ -40,6 +41,7 @@
     height: 24px;
     button {
       min-width: 24px;
+      height: 24px;
       padding: 0;
       font-size: 0;
       background-color: transparent;
