--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -103,3 +103,15 @@ textarea:not([rows]) {
 button {
   cursor: pointer;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
