--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -66,7 +66,15 @@ main.contents-area {
 }
 
 .gap-1 {
-  gap: 7px;
+  gap: 6px;
+}
+
+.gap-2 {
+  gap: 12px;
+}
+
+.gap-3 {
+  gap: 18px;
 }
 
 .dot {
