--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -27,6 +27,16 @@ footer {
   border-top: 1px solid $COLOR_GRAY_300;
   height: 50px;
 }
+a,
+button,
+div[role="button"] {
+  &:focus {
+    outline: 2px dashed blue;
+  }
+}
+button {
+  border: 2px solid #fff;
+}
 
 main.contents-area {
   flex: 1;
@@ -86,4 +96,121 @@ main.contents-area {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+}
+
+.sticky-banner {
+  position: relative;
+  width: 100%;
+  height: 0;
+  transition: height 0.3s ease-in-out;
+  -webkit-transition: height 0.3s ease-in-out;
+  -moz-transition: height 0.3s ease-in-out;
+  -ms-transition: height 0.3s ease-in-out;
+  -o-transition: height 0.3s ease-in-out;
+  .content {
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem 0.5rem 4.3rem;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 1rem;
+      top: 50%;
+      width: 36px;
+      height: 36px;
+      background-color: gray;
+      border-radius: 30%;
+      -webkit-border-radius: 30%;
+      -moz-border-radius: 30%;
+      -ms-border-radius: 30%;
+      -o-border-radius: 30%;
+      transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      -o-transform: translateY(-50%);
+    }
+    p {
+      font-size: 0.875rem;
+      line-height: 1.3;
+    }
+  }
+  &.open {
+    height: 70px;
+  }
+}
+
+.sticky-header {
+  position: sticky;
+  top: 0;
+  min-height: 60px;
+  background-color: #fff;
+  z-index: 2;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  background: #eee;
+  min-height: 240px;
+  border: 1px solid #eee;
+  /*Centerslidetextvertically*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-pagination-bullet-active {
+  width: 20px;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.main-swiper {
+  position: relative;
+}
+
+.sub-swiper {
+  padding-bottom: 3rem;
+  .swiper-slide {
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+  }
+}
+.sub-section {
+  padding: 1rem;
+}
+
+.card {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+  width: 100%;
+  background-color: rgba(146, 211, 255, 0.699);
+  padding: 1rem;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
 }
