--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -11,6 +11,14 @@
   max-height: 100vh;
 }
 
+body.dark-mode {
+  background-color: $COLOR_GRAY_900;
+  color: $COLOR_GRAY_300;
+  .sticky-header {
+    background-color: $COLOR_GRAY_800;
+  }
+}
+
 header {
   display: flex;
   align-items: center;
@@ -139,6 +147,7 @@ main.contents-area {
   }
   &.open {
     height: 70px;
+    min-height: 70px;
   }
 }
 
@@ -148,6 +157,8 @@ main.contents-area {
   min-height: 60px;
   background-color: #fff;
   z-index: 2;
+  display: flex;
+  justify-content: space-between;
 }
 
 .swiper {
