--- a/src/components/atoms/Button.module.scss
+++ b/src/components/atoms/Button.module.scss
@@ -6,15 +6,16 @@
   background-color: $COLOR_PRIMARY;
   color: $COLOR_WHITE;
   font-weight: 500;
+  font-size: 1.6rem;
   border: 0;
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
   overflow: hidden;
   &.md {
-    height: 48px;
+    height: 4.8rem;
   }
   &:active {
     filter: brightness(85%);
@@ -22,5 +23,7 @@
   &:disabled {
     opacity: 0.6;
     pointer-events: none;
+  }
+  &.dark {
   }
 }
