--- a/src/components/atoms/Icon.module.scss
+++ b/src/components/atoms/Icon.module.scss
@@ -1,14 +1,14 @@
 .icon {
   position: relative;
   display: block;
-  width: 28px;
-  min-width: 28px;
-  height: 28px;
+  width: 2.8rem;
+  min-width: 2.8rem;
+  height: 2.8rem;
   &.dash {
     &::after {
       content: "";
       position: absolute;
-      width: 10px;
+      width: 1rem;
       height: 2px;
       background-color: #000;
       left: 50%;
@@ -35,12 +35,12 @@
       -o-transform: translate(-50%, -50%);
     }
     &::before {
-      width: 10px;
+      width: 1rem;
       height: 2px;
     }
     &::after {
       width: 2px;
-      height: 10px;
+      height: 1rem;
     }
   }
 }
@@ -50,11 +50,11 @@
   align-items: center;
   justify-content: center;
   &.spinner {
-    width: 24px;
-    height: 24px;
+    width: 2.4rem;
+    height: 2.4rem;
     margin: 0 auto;
     animation: 2s linear infinite svg-animation;
-    max-width: 100px;
+    max-width: 10rem;
     circle {
       animation: 1.4s ease-in-out infinite both circle-animation;
       display: block;
@@ -63,8 +63,9 @@
       stroke-linecap: round;
       stroke-dasharray: 283;
       stroke-dashoffset: 280;
-      stroke-width: 14px;
+      stroke-width: 1.4rem;
       transform-origin: 50% 50%;
+      -webkit-animation: 1.4s ease-in-out infinite both circle-animation;
     }
   }
 }
