--- a/src/components/atoms/Input.module.scss
+++ b/src/components/atoms/Input.module.scss
@@ -4,7 +4,7 @@
 .input {
   position: relative;
   width: 100%;
-  height: 32px;
+  height: 3.2rem;
   border: 0;
   outline: 0;
   &[type="text"] {
