--- a/src/components/atoms/Switch.module.scss
+++ b/src/components/atoms/Switch.module.scss
@@ -3,14 +3,14 @@
 .switch {
   appearance: none;
   position: relative;
-  width: 48px;
-  height: 28px;
+  width: 4.8rem;
+  height: 2.8rem;
   background-color: $COLOR_GRAY_800;
-  border-radius: 14px;
-  -webkit-border-radius: 14px;
-  -moz-border-radius: 14px;
-  -ms-border-radius: 14px;
-  -o-border-radius: 14px;
+  border-radius: 1.4rem;
+  -webkit-border-radius: 1.4rem;
+  -moz-border-radius: 1.4rem;
+  -ms-border-radius: 1.4rem;
+  -o-border-radius: 1.4rem;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   -webkit-transition: background-color 0.3s ease-in-out;
@@ -20,10 +20,10 @@
   &:before {
     content: "";
     position: absolute;
-    top: 4px;
-    left: 4px;
-    width: 20px;
-    height: 20px;
+    top: 0.4rem;
+    left: 0.4rem;
+    width: 2rem;
+    height: 2rem;
     background-color: $COLOR_WHITE;
     border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -39,15 +39,17 @@
   &:checked {
     background-color: $COLOR_PRIMARY;
     &::before {
-      transform: translateX(20px);
-      -webkit-transform: translateX(20px);
-      -moz-transform: translateX(20px);
-      -ms-transform: translateX(20px);
-      -o-transform: translateX(20px);
+      transform: translateX(2rem);
+      -webkit-transform: translateX(2rem);
+      -moz-transform: translateX(2rem);
+      -ms-transform: translateX(2rem);
+      -o-transform: translateX(2rem);
     }
   }
   &:disabled {
     opacity: 0.4;
     cursor: not-allowed;
+  }
+  &.dark {
   }
 }
