--- a/src/components/atoms/Toast.module.scss
+++ b/src/components/atoms/Toast.module.scss
@@ -2,18 +2,18 @@
   position: fixed;
   left: 50%;
   bottom: 0px;
-  padding: 8px 12px;
+  padding: 0.8rem 1.2rem;
   background-color: #333;
   color: #fff;
   border-radius: 10px;
   width: fit-content;
   height: auto;
   transition: all 0.3s ease-in-out;
-  transform: translate(-50%, -20px);
-  -webkit-transform: translate(-50%, -20px);
-  -moz-transform: translate(-50%, -20px);
-  -ms-transform: translate(-50%, -20px);
-  -o-transform: translate(-50%, -20px);
+  transform: translate(-50%, -2rem);
+  -webkit-transform: translate(-50%, -2rem);
+  -moz-transform: translate(-50%, -2rem);
+  -ms-transform: translate(-50%, -2rem);
+  -o-transform: translate(-50%, -2rem);
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -23,17 +23,17 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   &.show {
-    transform: translate(-50%, -20px);
-    -webkit-transform: translate(-50%, -20px);
-    -moz-transform: translate(-50%, -20px);
-    -ms-transform: translate(-50%, -20px);
-    -o-transform: translate(-50%, -20px);
+    transform: translate(-50%, -2rem);
+    -webkit-transform: translate(-50%, -2rem);
+    -moz-transform: translate(-50%, -2rem);
+    -ms-transform: translate(-50%, -2rem);
+    -o-transform: translate(-50%, -2rem);
   }
   &.hide {
-    transform: translate(-50%, 50px);
-    -webkit-transform: translate(-50%, 50px);
-    -moz-transform: translate(-50%, 50px);
-    -ms-transform: translate(-50%, 50px);
-    -o-transform: translate(-50%, 50px);
+    transform: translate(-50%, 5rem);
+    -webkit-transform: translate(-50%, 5rem);
+    -moz-transform: translate(-50%, 5rem);
+    -ms-transform: translate(-50%, 5rem);
+    -o-transform: translate(-50%, 5rem);
   }
 }
