--- a/src/components/atoms/Checkbox.module.scss
+++ b/src/components/atoms/Checkbox.module.scss
@@ -1,5 +1,3 @@
-@import "../../styles/variable";
-
 .group {
   display: flex;
   flex-direction: row;
@@ -24,7 +22,7 @@
   width: 2rem;
   height: 2rem;
   min-width: 2rem;
-  background-color: $COLOR_GRAY_100;
+  background-color: var(--COLOR_GRAY_100);
   border-radius: 0.4rem;
   -webkit-border-radius: 0.4rem;
   -moz-border-radius: 0.4rem;
@@ -32,7 +30,7 @@
   -o-border-radius: 0.4rem;
   cursor: pointer;
   &:checked {
-    background-color: $COLOR_PRIMARY;
+    background-color: var(--COLOR_PRIMARY);
     &::before {
       content: "";
       position: absolute;
