--- a/src/components/atoms/Accordion.module.scss
+++ b/src/components/atoms/Accordion.module.scss
@@ -1,8 +1,6 @@
-@import "../../styles/variable";
-
 .item {
   display: block;
-  border: 1px solid $COLOR_GRAY_300;
+  border: 1px solid var(--COLOR_GRAY_300);
   border-radius: 0.8rem;
   -webkit-border-radius: 0.8rem;
   -moz-border-radius: 0.8rem;
@@ -12,7 +10,7 @@
 }
 
 .button {
-  background-color: $COLOR_WHITE;
+  background-color: var(--COLOR_WHITE);
   width: 100%;
   padding: 1rem 1.6rem;
   display: flex;
