--- a/src/components/atoms/Radio.module.scss
+++ b/src/components/atoms/Radio.module.scss
@@ -1,5 +1,3 @@
-@import "../../styles/variable";
-
 .fieldset {
   border: 0;
 }
@@ -44,7 +42,7 @@
     -o-transform: translate(-50%, -50%);
   }
   &::after {
-    background-color: $COLOR_PRIMARY;
+    background-color: var(--COLOR_PRIMARY);
     width: 0.8rem;
     height: 0.8rem;
     transform: translate(-50%, -50%) scale(0);
