--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,12 +1,52 @@
 @import "./font";
 @import "./reset";
-@import "./variable";
-
+:root,
+:root.light {
+  --COLOR_PRIMARY: #2589f4;
+  --COLOR_SECONDARY: #255cf4;
+  --COLOR_DANGER: #ee444a;
+  --COLOR_DANGER_SUB: #fceeee;
+  --COLOR_GRAY_50: #f8f9fa;
+  --COLOR_GRAY_100: #f1f3f5;
+  --COLOR_GRAY_200: #e9ecef;
+  --COLOR_GRAY_300: #dee2e6;
+  --COLOR_GRAY_400: #c5cbd1;
+  --COLOR_GRAY_500: #989fa7;
+  --COLOR_GRAY_600: #6d747b;
+  --COLOR_GRAY_700: #495057;
+  --COLOR_GRAY_800: #343a40;
+  --COLOR_GRAY_900: #212528;
+  --COLOR_WHITE: #fff;
+  --COLOR_BLACK: #000;
+  --COLOR_DIMM: rgba(0, 0, 0, 0.56);
+}
+:root.dark {
+  --COLOR_PRIMARY: #2589f4;
+  --COLOR_SECONDARY: #255cf4;
+  --COLOR_DANGER: #ee444a;
+  --COLOR_DANGER_SUB: #fceeee;
+  --COLOR_GRAY_50: #212528;
+  --COLOR_GRAY_100: #343a40;
+  --COLOR_GRAY_200: #495057;
+  --COLOR_GRAY_300: #6d747b;
+  --COLOR_GRAY_400: #989fa7;
+  --COLOR_GRAY_500: #c5cbd1;
+  --COLOR_GRAY_600: #dee2e6;
+  --COLOR_GRAY_700: #e9ecef;
+  --COLOR_GRAY_800: #f1f3f5;
+  --COLOR_GRAY_900: #f8f9fa;
+  --COLOR_WHITE: #000;
+  --COLOR_BLACK: #fff;
+  --COLOR_DIMM: rgba(0, 0, 0, 0.56);
+}
 html,
 body {
   font-size: 10px;
 }
-
+body {
+  background-color: var(--COLOR_GRAY_50);
+  color: var(--COLOR_GRAY_900);
+}
 #root {
   display: flex;
   flex-direction: column;
@@ -15,47 +55,36 @@ body {
   min-height: 100vh;
   max-height: 100vh;
 }
-
-body.dark-mode {
-  background-color: $COLOR_GRAY_900;
-  color: $COLOR_GRAY_300;
-  .sticky-header {
-    background-color: $COLOR_GRAY_800;
-  }
+.sticky-header {
+  background-color: var(--COLOR_GRAY_800);
 }
-
 header {
   display: flex;
   align-items: center;
   padding: 1rem;
-  border-bottom: 1px solid $COLOR_GRAY_300;
+  border-bottom: 1px solid var(--COLOR_GRAY_300);
   height: 5rem;
 }
-
 footer {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  border-top: 1px solid $COLOR_GRAY_300;
+  border-top: 1px solid var(--COLOR_GRAY_300);
   height: 5rem;
 }
-a,
-button,
-div[role="button"] {
-  &:focus {
-    outline: 2px dashed blue;
-  }
+a:focus,
+button:focus,
+div[role="button"]:focus {
+  outline: 2px dashed blue;
 }
 button {
   border: 2px solid #fff;
 }
-
 p {
   font-size: 1.6rem;
   word-break: keep-all;
 }
-
 main.contents-area {
   flex: 1;
   padding: 2rem;
@@ -63,59 +92,48 @@ main.contents-area {
   overflow-y: scroll;
   max-height: calc(100vh - 10rem);
 }
-
 .d-flex {
   display: flex;
-  &.col {
-    flex-direction: column;
-  }
 }
-
+.d-flex.col {
+  flex-direction: column;
+}
 .align-center {
   align-items: center;
 }
-
 .justify-evenly {
   justify-content: space-evenly;
 }
-
 .w-full {
   width: 100%;
 }
-
 .px-20 {
   padding-right: 2rem;
   padding-left: 2rem;
 }
-
 .py-13 {
   padding-top: 1.3rem;
   padding-bottom: 1.3rem;
 }
-
 .gap-1 {
   gap: 0.6rem;
 }
-
 .gap-2 {
   gap: 1.2rem;
 }
-
 .gap-3 {
   gap: 1.8rem;
 }
-
 .dot {
   width: 1rem;
   height: 1rem;
-  background-color: $COLOR_BLACK;
+  background-color: var(--COLOR_BLACK);
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-
 .sticky-banner {
   position: relative;
   width: 100%;
@@ -125,41 +143,40 @@ main.contents-area {
   -moz-transition: height 0.3s ease-in-out;
   -ms-transition: height 0.3s ease-in-out;
   -o-transition: height 0.3s ease-in-out;
-  .content {
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 1rem 0.5rem 5rem;
-    &::before {
-      content: "";
-      position: absolute;
-      left: 1rem;
-      top: 50%;
-      width: 3.6rem;
-      height: 3.6rem;
-      background-color: gray;
-      border-radius: 30%;
-      -webkit-border-radius: 30%;
-      -moz-border-radius: 30%;
-      -ms-border-radius: 30%;
-      -o-border-radius: 30%;
-      transform: translateY(-50%);
-      -webkit-transform: translateY(-50%);
-      -moz-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      -o-transform: translateY(-50%);
-    }
-    p {
-      font-size: 0.875rem;
-      line-height: 1.3;
-    }
-  }
-  &.open {
-    height: 7rem;
-  }
 }
-
+.sticky-banner.open {
+  height: 7rem;
+}
+.sticky-banner .content {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem 0.5rem 5rem;
+}
+.sticky-banner .content::before {
+  content: "";
+  position: absolute;
+  left: 1rem;
+  top: 50%;
+  width: 3.6rem;
+  height: 3.6rem;
+  background-color: gray;
+  border-radius: 30%;
+  -webkit-border-radius: 30%;
+  -moz-border-radius: 30%;
+  -ms-border-radius: 30%;
+  -o-border-radius: 30%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+}
+.sticky-banner .content p {
+  font-size: 0.875rem;
+  line-height: 1.3;
+}
 .sticky-header {
   position: sticky;
   top: 0;
@@ -169,12 +186,10 @@ main.contents-area {
   display: flex;
   justify-content: space-between;
 }
-
 .swiper {
   width: 100%;
   height: 100%;
 }
-
 .swiper-slide {
   width: 100%;
   text-align: center;
@@ -182,7 +197,6 @@ main.contents-area {
   background: #eee;
   min-height: 24rem;
   border: 1px solid #eee;
-  /*Centerslidetextvertically*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -195,32 +209,28 @@ main.contents-area {
   -ms-border-radius: 0.8rem;
   -o-border-radius: 0.8rem;
 }
-
 .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
 .main-swiper {
   position: relative;
 }
-
 .sub-swiper {
   padding-bottom: 3rem;
-  .swiper-slide {
-    border-radius: 1rem;
-    -webkit-border-radius: 1rem;
-    -moz-border-radius: 1rem;
-    -ms-border-radius: 1rem;
-    -o-border-radius: 1rem;
-  }
+}
+.sub-swiper .swiper-slide {
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
 }
 .sub-section {
   padding: 1rem;
 }
-
 .card {
   display: block;
   color: inherit;
@@ -234,56 +244,54 @@ main.contents-area {
   -ms-border-radius: 0.8rem;
   -o-border-radius: 0.8rem;
 }
-
 .skeleton {
   position: relative;
   overflow: hidden;
   display: flex;
   align-items: center;
   height: 4rem;
-  background-color: $COLOR_GRAY_300;
+  background-color: var(--COLOR_GRAY_300);
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
   -ms-border-radius: 0.5rem;
   -o-border-radius: 0.5rem;
-  .box {
-    width: 100%;
-    padding: 0 1.5rem 0 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .square {
-    background-color: $COLOR_GRAY_400;
-    border-radius: 0.2rem;
-    -webkit-border-radius: 0.2rem;
-    -moz-border-radius: 0.2rem;
-    -ms-border-radius: 0.2rem;
-    -o-border-radius: 0.2rem;
-    &.title {
-      width: 15rem;
-      height: 2.1rem;
-    }
-    &.icon {
-      width: 1rem;
-      height: 1rem;
-    }
-  }
-  &::after {
-    position: absolute;
-    content: "";
-    width: 4rem;
-    height: 50vh;
-    background-color: #fff;
-    opacity: 0.4;
-    filter: blur(0.8rem);
-    -webkit-filter: blur(0.8rem);
-    animation: 2s ease-in-out infinite shimmer;
-    -webkit-animation: 2s ease-in-out infinite shimmer;
-  }
 }
-
+.skeleton .box {
+  width: 100%;
+  padding: 0 1.5rem 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.skeleton .square {
+  background-color: var(--COLOR_GRAY_400);
+  border-radius: 0.2rem;
+  -webkit-border-radius: 0.2rem;
+  -moz-border-radius: 0.2rem;
+  -ms-border-radius: 0.2rem;
+  -o-border-radius: 0.2rem;
+}
+.skeleton .square.title {
+  width: 15rem;
+  height: 2.1rem;
+}
+.skeleton .square.icon {
+  width: 1rem;
+  height: 1rem;
+}
+.skeleton::after {
+  position: absolute;
+  content: "";
+  width: 4rem;
+  height: 50vh;
+  background-color: #fff;
+  opacity: 0.4;
+  filter: blur(0.8rem);
+  -webkit-filter: blur(0.8rem);
+  animation: 2s ease-in-out infinite shimmer;
+  -webkit-animation: 2s ease-in-out infinite shimmer;
+}
 @keyframes shimmer {
   0% {
     transform: translateX(-100vw) skewX(-15deg);
@@ -300,7 +308,6 @@ main.contents-area {
     -o-transform: translateX(100vw) skewX(-15deg);
   }
 }
-
 .button {
   background-color: pink;
 }
