--- a/src/components/atoms/Title.module.scss
+++ b/src/components/atoms/Title.module.scss
@@ -4,31 +4,29 @@
 .h4,
 .h5,
 .h6 {
-  font-size: 2rem;
-  font-weight: 800;
+  font-weight: bold;
+}
+
+.h1 {
+  font-size: 3rem;
 }
 
 .h2 {
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 2.4rem;
 }
 
 .h3 {
-  font-size: 1.4rem;
-  font-weight: bold;
+  font-size: 2.2rem;
 }
 
 .h4 {
-  font-size: 1.3rem;
-  font-weight: bold;
+  font-size: 2rem;
 }
 
 .h4 {
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-size: 1.9rem;
 }
 
 .h6 {
-  font-size: 1.1rem;
-  font-weight: bold;
+  font-size: 1.7rem;
 }
