--- a/src/components/atoms/Toast.module.scss
+++ b/src/components/atoms/Toast.module.scss
@@ -3,8 +3,8 @@
   left: 50%;
   bottom: 0px;
   padding: 0.8rem 1.2rem;
-  background-color: #333;
-  color: #fff;
+  background-color: var(--COLOR_GRAY_800);
+  color: var(--COLOR_WHITE);
   border-radius: 10px;
   width: fit-content;
   height: auto;
