--- a/src/components/atoms/Checkbox.module.scss
+++ b/src/components/atoms/Checkbox.module.scss
@@ -38,7 +38,7 @@
       top: 0;
       width: 2rem;
       height: 2rem;
-      background-image: url(../../assets/icons/check.svg);
+      background-image: url(../../assets/images/check.svg);
       background-position: center;
       background-repeat: no-repeat;
     }
