--- a/src/components/organisms/BottomSheet.module.css
+++ b/src/components/organisms/BottomSheet.module.css
@@ -61,7 +61,7 @@
       padding: 0;
       font-size: 0;
       background-color: transparent;
-      background-image: url(../../assets/icons/close.svg);
+      background-image: url(../../assets/images/close.svg);
       background-repeat: no-repeat;
       background-position: center;
       border: 0;
