--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,50 +1,13 @@
-@import "./font";
-@import "./reset";
-:root,
-:root.light {
-  --COLOR_PRIMARY: #2589f4;
-  --COLOR_SECONDARY: #255cf4;
-  --COLOR_DANGER: #ee444a;
-  --COLOR_DANGER_SUB: #fceeee;
-  --COLOR_GRAY_50: #f8f9fa;
-  --COLOR_GRAY_100: #f1f3f5;
-  --COLOR_GRAY_200: #e9ecef;
-  --COLOR_GRAY_300: #dee2e6;
-  --COLOR_GRAY_400: #c5cbd1;
-  --COLOR_GRAY_500: #989fa7;
-  --COLOR_GRAY_600: #6d747b;
-  --COLOR_GRAY_700: #495057;
-  --COLOR_GRAY_800: #343a40;
-  --COLOR_GRAY_900: #212528;
-  --COLOR_WHITE: #fff;
-  --COLOR_BLACK: #000;
-  --COLOR_DIMM: rgba(0, 0, 0, 0.56);
-}
-:root.dark {
-  --COLOR_PRIMARY: #2589f4;
-  --COLOR_SECONDARY: #255cf4;
-  --COLOR_DANGER: #ee444a;
-  --COLOR_DANGER_SUB: #fceeee;
-  --COLOR_GRAY_50: #212528;
-  --COLOR_GRAY_100: #343a40;
-  --COLOR_GRAY_200: #495057;
-  --COLOR_GRAY_300: #6d747b;
-  --COLOR_GRAY_400: #989fa7;
-  --COLOR_GRAY_500: #c5cbd1;
-  --COLOR_GRAY_600: #dee2e6;
-  --COLOR_GRAY_700: #e9ecef;
-  --COLOR_GRAY_800: #f1f3f5;
-  --COLOR_GRAY_900: #f8f9fa;
-  --COLOR_WHITE: #000;
-  --COLOR_BLACK: #fff;
-  --COLOR_DIMM: rgba(0, 0, 0, 0.56);
-}
+@forward "./font";
+@forward "./reset";
+@forward "./variable";
 html,
 body {
   font-size: 10px;
 }
 body {
   background-color: var(--COLOR_GRAY_50);
+  font-size: 1.6rem;
   color: var(--COLOR_GRAY_900);
 }
 #root {
@@ -149,19 +112,19 @@ main.contents-area {
 }
 .sticky-banner .content {
   display: flex;
-  height: 100%;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding: 0.5rem 1rem 0.5rem 5rem;
+  height: 100%;
 }
 .sticky-banner .content::before {
-  content: "";
   position: absolute;
-  left: 1rem;
   top: 50%;
+  left: 1rem;
   width: 3.6rem;
   height: 3.6rem;
   background-color: gray;
+  content: "";
   border-radius: 30%;
   -webkit-border-radius: 30%;
   -moz-border-radius: 30%;
@@ -178,28 +141,28 @@ main.contents-area {
   line-height: 1.3;
 }
 .sticky-header {
-  position: sticky;
-  top: 0;
-  min-height: 6rem;
-  background-color: #fff;
-  z-index: 2;
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  min-height: 6rem;
+  background-color: #fff;
 }
 .swiper {
   width: 100%;
   height: 100%;
 }
 .swiper-slide {
-  width: 100%;
-  text-align: center;
-  font-size: 1.8rem;
-  background: #eee;
-  min-height: 24rem;
-  border: 1px solid #eee;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  border: 1px solid #eee;
+  width: 100%;
+  min-height: 24rem;
+  background: #eee;
+  font-size: 1.8rem;
+  text-align: center;
 }
 .swiper-pagination-bullet-active {
   width: 2rem;
@@ -233,11 +196,11 @@ main.contents-area {
 }
 .card {
   display: block;
-  color: inherit;
-  text-decoration: none;
+  padding: 1rem;
   width: 100%;
   background-color: rgba(146, 211, 255, 0.699);
-  padding: 1rem;
+  color: inherit;
+  text-decoration: none;
   border-radius: 0.8rem;
   -webkit-border-radius: 0.8rem;
   -moz-border-radius: 0.8rem;
@@ -245,10 +208,10 @@ main.contents-area {
   -o-border-radius: 0.8rem;
 }
 .skeleton {
-  position: relative;
-  overflow: hidden;
   display: flex;
   align-items: center;
+  overflow: hidden;
+  position: relative;
   height: 4rem;
   background-color: var(--COLOR_GRAY_300);
   border-radius: 0.5rem;
@@ -258,11 +221,11 @@ main.contents-area {
   -o-border-radius: 0.5rem;
 }
 .skeleton .box {
-  width: 100%;
-  padding: 0 1.5rem 0 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 1.5rem 0 1rem;
+  width: 100%;
 }
 .skeleton .square {
   background-color: var(--COLOR_GRAY_400);
@@ -282,15 +245,15 @@ main.contents-area {
 }
 .skeleton::after {
   position: absolute;
-  content: "";
   width: 4rem;
   height: 50vh;
   background-color: #fff;
+  animation: 2s ease-in-out infinite shimmer;
+  -webkit-animation: 2s ease-in-out infinite shimmer;
+  content: "";
   opacity: 0.4;
   filter: blur(0.8rem);
   -webkit-filter: blur(0.8rem);
-  animation: 2s ease-in-out infinite shimmer;
-  -webkit-animation: 2s ease-in-out infinite shimmer;
 }
 @keyframes shimmer {
   0% {
